Add two constant to LevelArguments